# cpp-app-engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
engine/src/: CMakeLists.txt
engine/src/cores/: Application.cpp
engine/src/cores/include/AppEngine/: AppEngine.hpp  Application.hpp
engine/src/modules/: CMakeLists.txt
engine/src/modules/EngineApplication/: CMakeLists.txt
engine/src/modules/EngineApplication/src/: Application.cpp  ApplicationBuilder.cpp  CMakeLists.txt
engine/src/modules/EngineApplication/src/include/EngineApplication/: Application.hpp  ApplicationBuilder.hpp  EngineApplication.hpp
engine/src/modules/EngineApplication/tests/: AppRunningTest.cpp  CMakeLists.txt  PreInclude.hpp
engine/src/modules/EngineCores/src/: ArrayUtils.cpp  CMakeLists.txt  FileUtils.cpp  ScopDefinition.cpp  StringUtils.cpp  TimeUtils.cpp  Timestep.cpp
engine/src/modules/EngineCores/src/include/EngineCores/: ArrayUtils.hpp  EngineCores.hpp  FileUtils.hpp  ScopeDefinition.hpp  StringUtils.hpp  TimeUtils.hpp  Timestep.hpp
engine/src/modules/EngineCores/tests/: FileUtilsTest.cpp  PreInclude.hpp  StringUtilsTest.cpp
engine/src/modules/EngineDataType/src/: Array.cpp  Bool.cpp  CMakeLists.txt  Data.cpp  DataStorage.cpp  DataTypeBase.cpp  Image.cpp  Integer.cpp  Integer2.cpp  Integer3.cpp  Integer4.cpp  String.cpp
engine/src/modules/EngineDataType/src/include/EngineDataType/: Array.hpp  Bool.hpp  Data.hpp  DataStorage.hpp  DataTypeBase.hpp  EngineDataType.hpp  Image.hpp  InputType.hpp  Integer.hpp  Integer2.hpp  Integer3.hpp  Integer4.hpp  LockableVarible.hpp  PreInclude.hpp  String.hpp  StringDataType.hpp
engine/src/modules/EngineDataType/tests/: BoolTest.cpp  DataTypeBaseTest.cpp  EngineDataTypeTest.cpp  EngineDataTypeTest.hpp  Float2Test.cpp  FloatTest.cpp  ImageDataTest.cpp  Integer2Test.cpp  Integer3Test.cpp  Integer4Test.cpp  IntegerTest.cpp  PreInclude.hpp  StringTest.cpp
engine/src/modules/EngineDataType/vendors/: CMakeLists.txt
engine/src/modules/EngineExceptions/src/: ApplicationConfigErrorException.cpp  CMakeLists.txt  ImGuiApplicationConfigErrorException.cpp
engine/src/modules/EngineExceptions/src/include/EngineExceptions/: ApplicationConfigErrorException.hpp  EngineExceptions.hpp  ImGuiApplicationConfigErrorException.hpp
engine/src/modules/EngineImGui/: CMakeLists.txt
engine/src/modules/EngineImGui/src/: CMakeLists.txt  ImGuiApplication.cpp  ImGuiApplicationBuilder.cpp  ImGuiWindow.cpp
engine/src/modules/EngineImGui/src/include/EngineImGui/: EngineImGui.hpp  ImGuiApplication.hpp  ImGuiApplicationBuilder.hpp  ImGuiComponent.hpp  ImGuiWindow.hpp
engine/src/modules/EngineImGui/tests/: CMakeLists.txt  ImGuiApplicationTest.cpp  TestMain.cpp
engine/src/modules/EngineImGui/vendors/: CMakeLists.txt
engine/src/modules/EngineImGuiComponents/: CMakeLists.txt
engine/src/modules/EngineImGuiComponents/src/: CMakeLists.txt  ImGuiFileDialog.cpp  ImGuiImage.cpp  NttImGuiFileDialog.cpp
engine/src/modules/EngineImGuiComponents/src/include/EngineImGuiComponents/: EngineImGuiComponents.hpp  ImGuiFileDialog.hpp  ImGuiImage.hpp  ImGuiSelectableVector.hpp  NttImGuiFileDialog.hpp  PreInclude.hpp
engine/src/modules/EngineImGuiComponents/vendors/: CMakeLists.txt
engine/src/modules/EngineLogging/src/include/EngineLogging/: EngineLogging.hpp  Logging.hpp
engine/src/modules/EnginePeripherals/src/: CMakeLists.txt  UARTConnection.cpp
engine/src/modules/EnginePeripherals/src/include/EnginePeripherals/: EnginePeripherals.hpp  UARTConnection.hpp
engine/src/modules/EngineSupportWindows/src/: CMakeLists.txt  DemoWindow.cpp  Overlay.cpp
engine/src/modules/EngineSupportWindows/src/include/EngineSupportWindows/: DemoWindow.hpp  EngineSupportWindows.hpp  Overlay.hpp
engine/src/modules/EngineThreading/src/: CMakeLists.txt  Command.cpp  Lock.cpp  LockArray.cpp  LockableVar.cpp  Pool.cpp  Thread.cpp
engine/src/modules/EngineThreading/src/include/EngineThreading/: EngineThreading.hpp  Lock.hpp  LockArray.hpp  LockableVar.hpp  Thread.hpp
engine/src/modules/EngineThreading/src/include/EngineThreading/WorkPool/: Command.hpp  Pool.hpp  WorkPool.hpp
engine/src/modules/EngineThreading/src/include/EngineThreading/WorkPool/mock/: WorkPoolMock.hpp
engine/src/modules/EngineThreading/src/include/EngineThreading/mock/: ThreadMock.hpp
engine/src/modules/EngineThreading/tests/: EngineThreadIntegrationTest.cpp  EngineThreadOnlyTesting.cpp  EngineWorkPoolTest.cpp  PreInclude.hpp
engine/src/modules/EngineWindow/: CMakeLists.txt
engine/src/modules/EngineWindow/src/: CMakeLists.txt  Window.cpp  WindowImpl.cpp
engine/src/modules/EngineWindow/src/include/EngineWindow/: EngineWindow.hpp  Window.hpp  WindowImpl.hpp
engine/src/modules/EngineWindow/src/include/EngineWindow/mocking/: WindowMocking.hpp
engine/src/modules/EngineWindow/tests/: CMakeLists.txt  EngineWindowTests.cpp  PreInclude.hpp
engine/src/modules/EngineWindow/vendors/: CMakeLists.txt
engine/tests/: AppRunningTest.cpp  CMakeLists.txt
engine/vendors/: CMakeLists.txt
examples/: CMakeLists.txt
examples/CameraThreadExample/: CMakeLists.txt  CameraThread.cpp  Main.cpp
examples/CameraThreadExample/include/: CameraThread.hpp
examples/SimpleExample/: CMakeLists.txt  Main.cpp
examples/WorkPoolExample/: CMakeLists.txt  Main.cpp
